--- a/style.css
+++ b/style.css
@@ -2,17 +2,21 @@
   box-sizing: border-box;
 }
 
-.wrapper {
-  width: 500px;
-  margin: auto;
+
 }
 
-/*changes font style for h1 & h2 to Comic Sans MS and uses serif as a fallback*/
+/*class that will increase the font size to 24 pixels*/
+.large-font {
+  font-size: 24px;
+}
+
+
+/*changes font style for header 1 & header 2 to the font Comic Sans MS and uses serif as a fallback font is Comic Sans MS is unavailable*/
 h1, h2 {
   font-family: "Comic Sans MS", serif;
 }
 
-/*changes font style for p, ul, & ol to Comic Sans MS and uses serif as a fallback*/
+/*changes font style for paragraphs, unordered list, & ordered list to the font Comic Sans MS and uses serif as a fallback font if Cominc Sans is unavailable*/
 p, ul, ol {
   font-family: -apple-system, sans-serif
 }
@@ -22,19 +26,19 @@ p, ul, ol {
   text-align: center;
 }
 
-/*color used for the background of the body*/
+/*color used for the background of the website*/
 .lightdark {
   background-color: #9accc865;
 }
 
-/*background color and border for header and footer*/
+/*background color and border for header container and footer container*/
 .dark {
   background-color: #a3a3a3;
   color: rgba(0, 0, 0, 0.76);
   border: #000000 solid 1px
 }
 
-/*adjusts the header's margin and rounds the corners. */
+/*adjusts the header container's margin and rounds the corners. */
 .header {
   margin-top: 20px;
   margin-bottom: 20px; 
@@ -49,7 +53,7 @@ p, ul, ol {
   border-radius: 15px;
 }
 
-/*shapes rulers into diamonds*/
+/*Horizontal rulers that would normally be a straight line through the page will now be in the shape of a diamond */
 hr {
 height: 10px;
 width: 10px;
@@ -60,5 +64,5 @@ transform: rotate(45deg);
 
 a:link {color: green} /*links will be green*/
 a:visited {color: rgb(211, 31, 211)} /*visited links will be magenta*/
-a:hover {color: rgb(5, 206, 5)} /*links hovered over will be light green*/
+a:hover {color: rgb(5, 206, 5)} /*links hovered over with the cursor will turn light green*/
 a:active {color: purple} /*links when clicked will be purple*/
